[#9] mv llm test code

--- a/test.ipynb
+++ b/test.ipynb
@@ -31,6 +31,84 @@
     "response = requests.post(url, headers=headers, data=json.dumps(data))\n",
     "print(response.json()) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vllm.vllm import SamplingParams\n",
+    "from vllm.vllm import LLM\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "llm = LLM(\n",
+    "    model=\"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\",\n",
+    "    dtype=\"float32\",\n",
+    "    max_model_len=49028,\n",
+    "    # device=\"mps\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Initialize the tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\")\n",
+    "\n",
+    "# Prepare your prompts\n",
+    "base_prompt = \"\"\"\n",
+    "You are designed to answer user questions accurately and effectively.\n",
+    "Reference documents will be provided and if the references contain useful information then use it. \n",
+    "But using them is not mendatory, if they are not relevant you could ignore them.\n",
+    "Also Your response should be short, compact, clear, well-structured, compact and informative.\n",
+    "\"\"\"\n",
+    "cites = \"\"\"\n",
+    "Now, here are some hint Documents.\n",
+    "1. Doc1: Israel Adesanya fights in the middleweight division and was the middleweight champion from 2019 to 2022.\n",
+    "2. Doc: 2024 UFC middleweight champion is Dricus du Plessis. and he got his next fight at UFC 312 fight card with his contender Sean Strickland.\n",
+    "2. Doc3: In the wake of Yoel Romero’s stunning knock out victory against Luke Rockholdat UFC 221, there are a number of possible matchups at 2021\n",
+    "\n",
+    "Please answer the question.\n",
+    "\"\"\"\n",
+    "prompt = f\"who is the 2024 UFC middleweight champion?{cites}\"\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": f\"You are Qwen, created by Alibaba Cloud. You are a helpful assistant. {base_prompt}\"},\n",
+    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "]\n",
+    "text = tokenizer.apply_chat_template(\n",
+    "    messages,\n",
+    "    tokenize=False,\n",
+    "    add_generation_prompt=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "query = \"who is the 2024 UFC middleweight champion?\"\n",
+    "\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": base_prompt\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt,\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
+    "        \"content\": cites,\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "sampling_params = SamplingParams(max_tokens=64)\n",
+    "\n",
+    "from time import time\n",
+    "\n",
+    "start = time()\n",
+    "output = llm.chat(conversation, sampling_params=sampling_params)\n",
+    "end = time()\n",
+    "# text='</think>\\n\\nThe 2024 UFC middleweight champion is Dricus'\n",
+    "print(output)\n",
+    "print(f\"time elapsed {end - start}s\")\n"
+   ]
   }
  ],
  "metadata": {
