--- a/test.ipynb
+++ b/test.ipynb
@@ -34,6 +34,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/rag/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Device set to use mps\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<summary.summarize.Summarizer at 0x105f426c0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from summary.summarize import Summarizer\n",
+    "\n",
+    "Summarizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -113,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vllm",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
